fix docker setup